# osu.py

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py  test.py
.github/: dependabot.yml
.github/workflows/: build.yml
osu/: __init__.py  events.py  exceptions.py  game.py  tasks.py  utils.py
osu/api/: __init__.py  client.py  constants.py
osu/bancho/: __init__.py  client.py  connector.py  connector_http.py  connector_tcp.py  connector_ws.py  constants.py  packet_helpers.py  packets.py  streams.py
osu/objects/: __init__.py  beatmap.py  channel.py  client.py  collections.py  comment.py  lists.py  match.py  player.py  replays.py  score.py  status.py
osu/tcp/: __init__.py  bancho.py  game.py
